fix footer on mobile

--- a/inc/assets/sass/responsive_rtl.scss
+++ b/inc/assets/sass/responsive_rtl.scss
@@ -471,9 +471,6 @@
 	// footer classes
 	.main_footer_section{
 		.first-section {
-			display: flex;
-			justify-content: space-between;
-			align-items: start;
 			width: 100% !important;
 			li {
 				a{
